# cpackman

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.8219cbd  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
ipnetlib/: CMakeLists.txt
ipnetlib/src/: CMakeLists.txt  ipnetlib.cpp  ipnetlib.hpp
